# jupiter-engine

./: .gitignore  CMakeLists.txt  README.md  libs-for-sfml.txt
cmake/: FindSFML.cmake
dependencies/: CMakeLists.txt
docs/: libs-for-sfml.txt
include/: LambdaStates.hpp  Screen.hpp  StateMachine.hpp
include/entity/: ComponentFamily.hpp  Entity.hpp  EntityEngine.hpp  EntityFamily.hpp  EntitySystem.hpp  IteratingSystem.hpp
include/event/: Dispatcher.hpp  Event.hpp
src/: lambda-states.cpp  screen.cpp  state-machine.cpp  state.cpp
src/entity/: component-family.cpp  entity-engine.cpp  entity-system.cpp  iterating-system.cpp
src/event/: dispatcher.cpp  entity.cpp  event.cpp
